--- a/Itfirm/pom.xml
+++ b/Itfirm/pom.xml
@@ -46,6 +46,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -54,7 +59,15 @@
 			<scope>provided</scope>
 		</dependency>
 
-	</dependencies>
+			<!-- REST-assured core -->
+			<dependency>
+				<groupId>io.rest-assured</groupId>
+				<artifactId>rest-assured</artifactId>
+				<version>5.3.0</version>
+
+			</dependency>
+		</dependencies>
+
 
 	<build>
 		<plugins>
