--- a/Itfirm/src/main/resources/application.properties
+++ b/Itfirm/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/testdb
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
+management.endpoints.web.exposure.include[]=health,info,metrics,loggers
 # Optional: JPA settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
